        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=19527
        ASSERTION FAILED: containerA && containerB

        Test: fast/dom/Range/bug-19527.html

        * dom/Range.cpp:
        (WebCore::Range::isPointInRange):
        (WebCore::Range::comparePoint):
        Bring the behavior in line with current Firefox, making it impossible for these methods
        to pass a null container to compareBoundaryPoints().



Canonical link: https://commits.webkit.org/33328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41253 268f45cc-cd09-0410-ab3c-d52691b4dbfc